--- a/module-3/11_CSS_Grid/student-exercise/grids.css
+++ b/module-3/11_CSS_Grid/student-exercise/grids.css
@@ -1,3 +1,119 @@
-header{
-    grid-area:header;
+
+
+
+
+main h1#headline{
+    grid-area: headline;
 }
+
+main div#student-quote{
+    grid-area: student-quote;
+}
+ main div#student-picture{
+grid-area: student-picture;
+text-align: center;
+ }
+
+main div#student-profile{
+    grid-area:student-profile
+}
+main div#student-contact{
+    grid-area: student-contact;
+    text-align: center;
+}
+
+main div#experience-database{
+    grid-area: experience-database;
+}
+
+main div#experience-grid{
+    grid-area: experience-grid;
+}
+
+main div#experience-code{
+    grid-area: experience-code;
+}
+main div#experience-database{
+    grid-area: experience-database;
+}
+main div#experience-web{
+    grid-area: experience-web;
+}
+
+main div#experience-design{
+    grid-area: experience-design;
+}
+
+
+main#main-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 20px;
+    column-gap: 50px;
+    grid-template-areas: 
+    "headline headline student-picture"
+    "student-quote student-quote student-picture"
+    "student-profile student-profile student-contact"
+    "experience-grid experience-grid experience-grid";
+    align-items: center;
+
+}
+
+main div#experience-grid{
+    grid-area:experience-grid;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap:20px;
+    column-gap: 50px;
+    grid-template-areas:
+    "experience-code experience-code"
+    "experience-database experience-database"
+    "experience-web experience-design"
+}
+@media screen and (max-width: 1024px){
+    main#main-grid{
+        display:grid;
+        column-gap: 35px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "headline headline"
+        "student-quote student-picture"
+        "student-quote student-contact"
+        "student-profile student-profile"
+        "experience-grid experience-grid";
+    }
+
+main div#experience4-grid{
+    display: grid;
+    column-gap: 20px;
+    row-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "experience-code experience-web"
+    "experience-database experience-design";
+}
+}
+@media screen and (max-width: 450px){
+    main#main-grid{
+        display:grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "headline"
+        "student-picture"
+        "student-contact"
+        "student-quote"
+        "student-profile"
+        "experience-grid";
+    }
+
+main div#experience4-grid{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas: 
+    "experience-code"
+    "experience-web"
+    "experience-database"
+    "experience-design";
+}
+}
+
