--- a/module-3/12_Flexbox/student-exercise/portfolio/css/main.css
+++ b/module-3/12_Flexbox/student-exercise/portfolio/css/main.css
@@ -4,21 +4,38 @@ body {
   min-height: 100vh;
   /* Photo by Andre Furtado on Unsplash */
   background: url(../img/andre-furtado-JtV6zyOZSrA-unsplash.jpg) left / cover no-repeat;
+  display: flex;
+  
 }
 
 #left-panel {
   background-color: #F7F7F7;
+ display: table-column;
+  flex-basis: 35%;
 }
 
 ul.social-icons {
   list-style-type: none;
   margin: 20px 20px;
   padding: 0;
+  display: flex;
+  justify-content:space-between;
 }
 
-nav {}
+nav {
+  display: flex;
 
-#right-panel {}
+ 
+}
+
+#right-panel {
+  display: flex;
+align-items: center;
+margin: auto;
+align-content: center;
+text-align: center;
+
+}
 
 /* YOU WON'T NEED TO CHANGE ANY STYLES BELOW THIS LINE */
 
