--- a/module-3/12_Flexbox/student-exercise/mini-exercises/align-content-column/step-1/main.css
+++ b/module-3/12_Flexbox/student-exercise/mini-exercises/align-content-column/step-1/main.css
@@ -3,11 +3,15 @@ body {
   padding: 0;
   font-family: 'Oswald', sans-serif;
   font-size: 2.5em;
+  
 }
 
 .container {
   background-color: #F0F0F0;
   height: 500px;
+  display: flex;
+  align-items: center;
+  justify-items: center;
 }
 
 .box {
@@ -15,4 +19,5 @@ body {
   background-color: #00AFEF;
   color: #fff;
   border: solid 1px #777;
+  
 }
