--- a/module-3/12_Flexbox/student-exercise/mini-exercises/flex-items-size/step-1/main.css
+++ b/module-3/12_Flexbox/student-exercise/mini-exercises/flex-items-size/step-1/main.css
@@ -3,10 +3,14 @@ body {
   padding: 0;
   font-family: 'Oswald', sans-serif;
   font-size: 2.5em;
+ 
 }
 
 .container {
   background-color: #F0F0F0;
+display: flex;
+
+
 }
 
 .box {
@@ -16,4 +20,9 @@ body {
   color: #fff;
   text-align: center;
   border: solid 1px #777;
+ display:flex;
+ flex-basis: inherit;
+ flex-grow: 2;
+
+
 }
