--- a/module-3/12_Flexbox/student-exercise/mini-exercises/flex-order/step-1/main.css
+++ b/module-3/12_Flexbox/student-exercise/mini-exercises/flex-order/step-1/main.css
@@ -9,12 +9,19 @@ body {
   padding: 20px;
   margin-bottom: 20px;
   border: solid 1px #555;
+  display: flex;
 }
 
 .bio img {
   width: 150px;
   border-radius: 999px;
   margin: 0 10px;
+  display: flex;
+order: 1;
+
 }
 
-.bio:nth-child(2) img {}
+.bio:nth-child(2) img {
+  display: flex;
+order: initial;
+}
