--- a/module-3/12_Flexbox/student-exercise/mini-exercises/header/step-1/main.css
+++ b/module-3/12_Flexbox/student-exercise/mini-exercises/header/step-1/main.css
@@ -6,16 +6,23 @@ body {
 header {
   background-color: #F0F0F0;
   padding: 20px;
+  display: flex;
+ 
+  
 }
 
 .logo {
   width: 140px;
+  
+ 
 }
 
 ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: table-row;
+  display: flex;
 }
 
 li {
@@ -25,6 +32,8 @@ li {
   color: #707070;
   padding: 0 20px 0 0;
   margin-left: 20px;
+ 
+  ;
 }
 
 a,
