--- a/module-3/12_Flexbox/student-exercise/mini-exercises/header/step-3/main.css
+++ b/module-3/12_Flexbox/student-exercise/mini-exercises/header/step-3/main.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 20px;
   padding: 0
@@ -6,6 +7,8 @@ body {
 header {
   background-color: #F0F0F0;
   padding: 20px;
+  display: flex;
+
 }
 
 .logo {
@@ -20,6 +23,9 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  justify-content: flex-end;
+
 }
 
 li {
