--- a/module-3/12_Flexbox/student-exercise/mini-exercises/header/step-4/main.css
+++ b/module-3/12_Flexbox/student-exercise/mini-exercises/header/step-4/main.css
@@ -6,6 +6,10 @@ body {
 header {
   background-color: #F0F0F0;
   padding: 20px;
+display: flex;
+
+
+
 }
 
 .logo {
@@ -16,6 +20,11 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+ display: flex;
+ 
+
+
+ 
 }
 
 li {
@@ -25,12 +34,14 @@ li {
   color: #707070;
   padding: 0 20px 0 0;
   margin-left: 20px;
+ 
 }
 
 li a,
 li a:visited {
   color: #707070;
   text-decoration: none;
+ 
 }
 
 li a:hover {
@@ -38,8 +49,13 @@ li a:hover {
   text-decoration: underline;
 }
 
-.spacer {}
+.spacer{
+  display: flex;
+  justify-self: flex-end;
+  margin-left: auto;
+}
 
 .my-account img {
   width: 32px;
+
 }
